2013-09-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.6.1-mingw32-beta-20130910-1 released.

	* srcdist-doc/NEWS.in: Release notes updated.
	* All files (r0-6-1-beta-20130910-1): Tag assigned.

2013-09-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug #2026.

	* src/dmhguix.cpp (DMH_PTY_GUARDBYTES): New manifest constant.
	(dmhTypePTY::printf) [buffer full]: Use it; it defines a reserved byte
	count, at end of buffer, where expansion or scroll out is triggered;
	use memcpy() for scroll out, but avoid overlapping regions.
	(dmhTypePTY::printf) [output == '\r']: Handle it.

	* src/tarproc.cpp (create_output_stream): Improve diagnostic messages;
	discriminate between file collision and other privilege violations.
	(pkgArchiveProcessor::ExtractFile): Don't return a zero status code,
	when the output stream could not be successfully opened, so that...
	(pkgTarArchiveInstaller::ProcessDataStream): ...we may avoid writing a
	spurious manifest entry here.

2013-09-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update version, pre-empting subsequent release.

	* VERSION.m4 (VERSION_PATCH): Bump from zero to 1.

2013-09-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.6.0-mingw32-beta-20130904-1 released.

	* srcdist-doc/NEWS.in srcdist-doc/README.in: Release notes updated.
	* srcdist-doc/INSTALL.in: Installation instructions updated.
	* All files (r0-6-0-beta-20130904-1): Tag assigned.

2013-08-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement retry throttling for failed internet connections.

	* src/pkginet.h (INTERNET_RETRY_ATTEMPTS): New macro; define it.
	(INTERNET_RETRY_INTERVAL, INTERNET_DELAY_FACTOR): Likewise.

	* src/pkginet.cpp (INTERNET_RETRY_REQUESTER): New typedef.
	(pkgInternetAgent::connection_delay, pkgInternetAgent::delay_factor):
	(pkgInternetAgent::retries, pkgInternetAgent::retry_interval): New
	private member variables; declare them.